<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_anchorGravity="center"
    tools:context=".Activity.Login">

    <LinearLayout
        android:id="@+id/login_linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/gray"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/login_img_logo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            app:srcCompat="@drawable/ic_ico_store" />

        <EditText
            android:id="@+id/login_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/shape_login_enter_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/login_input1"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/shape_login_enter_text"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/login_input2"
            android:inputType="textPassword" />
        <TextView
            android:id="@+id/login_txt_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login as ADMIN ?"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:paddingStart="@dimen/_20sdp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_weight="1"
                android:background="@drawable/shape_login_btn1"
                android:text="@string/login_btn1"
                android:textColor="#fff" />

            <Button
                android:id="@+id/login_btn_regester"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_3sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_weight="1"
                android:background="@drawable/shape_login_btn2"
                android:text="@string/login_btn2"
                android:textColor="#fff" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/login_linear2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ImageView
            android:id="@+id/login_img_back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"/>
        <EditText
            android:id="@+id/login_et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/shape_login_enter_text"
            android:ems="10"
            android:gravity="center"
            android:hint="Enter Admin Code"
            android:inputType="textPassword"
            android:layout_centerInParent="true"/>
        <Button
            android:id="@+id/login_btn_admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_80sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_weight="1"
            android:background="@drawable/shape_login_btn1"
            android:text="@string/login_btn1"
            android:textColor="#fff"
            android:layout_below="@+id/login_et_code"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>


</LinearLayout>