<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AdminActivity"
    android:background="@color/gray">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/gray">
        <LinearLayout
            android:id="@+id/admin_add_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:padding="@dimen/_5sdp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/carrois_gothic"
                android:text="Add a new for Menu"
                android:textSize="@dimen/_15ssp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="start" />
            <ImageView
                android:id="@+id/admin_add_title_forward"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                app:srcCompat="@drawable/ic_forward"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_5sdp"/>
            <ImageView
                android:id="@+id/admin_add_title_expand"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                app:srcCompat="@drawable/ic_expand"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_5sdp"
                android:visibility="gone"/>
        </LinearLayout>
       <LinearLayout
           android:id="@+id/admin_add_layout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:visibility="gone">
           <FrameLayout
               android:id="@+id/admin_img_ly"
               android:layout_width="@dimen/_100sdp"
               android:layout_height="@dimen/_100sdp"
               android:layout_gravity="center_horizontal"
               android:layout_marginBottom="@dimen/_20sdp"
               android:layout_marginTop="@dimen/_10sdp">
               <de.hdodenhof.circleimageview.CircleImageView
                   android:id="@+id/admin_img"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:src="#fff"/>
               <ImageView
                   android:layout_width="@dimen/_25sdp"
                   android:layout_height="@dimen/_25sdp"
                   app:srcCompat="@drawable/ic_edit"
                   android:background="@drawable/circle_background"
                   android:padding="@dimen/_2sdp"
                   android:layout_gravity="bottom|end"
                   android:layout_marginEnd="@dimen/_5sdp"
                   android:layout_marginBottom="@dimen/_5sdp"
                   android:layout_marginRight="@dimen/_5sdp"/>
           </FrameLayout>

           <EditText
               android:id="@+id/admin_et_title"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="@dimen/_15sdp"
               android:layout_marginRight="@dimen/_15sdp"
               android:layout_marginBottom="@dimen/_5sdp"
               android:background="@drawable/shape_login_enter_text"
               android:ems="10"
               android:gravity="center"
               android:hint="@string/title"
               android:inputType="textPersonName" />
           <EditText
               android:id="@+id/admin_et_desc"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="@dimen/_15sdp"
               android:layout_marginRight="@dimen/_15sdp"
               android:layout_marginBottom="@dimen/_5sdp"
               android:background="@drawable/shape_login_enter_text"
               android:ems="10"
               android:gravity="center"
               android:hint="@string/description"
               android:inputType="textPersonName" />
           <EditText
               android:id="@+id/admin_et_price"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginLeft="@dimen/_15sdp"
               android:layout_marginRight="@dimen/_15sdp"
               android:layout_marginBottom="@dimen/_5sdp"
               android:background="@drawable/shape_login_enter_text"
               android:ems="10"
               android:gravity="center"
               android:hint="Price as Dollar"
               android:inputType="number" />
           <Spinner
               android:id="@+id/admin_spinner"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="@drawable/shape_login_enter_text"
               android:layout_marginLeft="@dimen/_15sdp"
               android:layout_marginRight="@dimen/_15sdp"
               android:layout_marginBottom="@dimen/_5sdp"
               android:gravity="center"
               />
           <Button
           android:id="@+id/admin_add_btn"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="@dimen/_80sdp"
           android:layout_marginTop="@dimen/_15sdp"
           android:layout_marginEnd="@dimen/_80sdp"
           android:layout_marginBottom="@dimen/_15sdp"
           android:layout_weight="1"
           android:background="@drawable/shape_login_btn1"
           android:text="@string/send"
           android:textColor="#fff" />
       </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/carrois_gothic"
            android:text="@string/all_menu"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/admin_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="false"
            android:scrollbars="none"
            />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>